src/components/Portfolio/Portfolio.css
.portfolio, .portfolio * {
  background-color: var(--customBlack);
}

.portfolio .slider {
  height: 40rem;
  padding-bottom: 4rem;
  margin-top: 9rem;
}

.portfolio .slider nav button[class*="--active"] {
  background-color: var(--secondary);
}

.portfolio .slider .portfolioCardDiv {
  height: 100%;
  width: 100%;
  display: flex;
  align-items: center;
  flex-direction: column;
  padding-top: 3rem;
}

.portfolio .slider .portfolioCardDiv .portfolioCard {
  background-color: transparent;
  width: 95%;
  display: flex;
  justify-content: center;
  align-items: center;
  min-height: 15rem;
  padding: var(--custom-padding);
  border-radius: var(--custom-border-radius);
  text-align: center;
  box-shadow: var(--custom-box-shadow);
}

.portfolio .slider .portfolioCardDiv a:active, .portfolio .slider .portfolioCardDiv a:active * {
  background: var(--primary);
  color: var(--customBlack);
}

.portfolio .slider .portfolioCardDiv .portfolioCardDescription {
  width: 100%;
  margin: 9rem 0;
  background-color: transparent;
  height: 95%;
  display: flex;
  align-items: center;
  justify-content: center;
  text-align: center;
}

.portfolio .slider .portfolioCardDiv .portfolioCardSkeletonDiv {
  background-color: transparent;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  width: 100%;
}

.portfolio .slider .portfolioCardDiv .portfolioCardSkeletonDiv div {
  background-color: var(--text);
  border-radius: var(--custom-border-radius);
  margin-top: 1rem;
}

.portfolio .slider .portfolioCardDiv .portfolioCard .portfolioCardTitleSkeleton1,
.portfolio .slider .portfolioCardDiv .portfolioCard .portfolioCardTitleSkeleton2 {
  width: 80%;
  height: 1.6rem;
}

.portfolio .slider .portfolioCardDiv .portfolioCard .portfolioCardTitleSkeleton2 {
  width: 65%;
}

.portfolio .slider .portfolioCardDiv .portfolioCardDescriptionSkeleton1,
.portfolio .slider .portfolioCardDiv .portfolioCardDescriptionSkeleton2 {
  width: 87%;
  height: 1.2rem;
}

.portfolio .slider .portfolioCardDiv .portfolioCardDescriptionSkeleton2 {
  width: 80%;
}

.comingSoonLabel {
  display: flex;
  align-items: center;
  justify-content: center;
  position: absolute;
  top: 36%;
  padding: var(--custom-padding);
  width: 200vw;
  background: linear-gradient(var(--blur), var(--blur));
  transform: rotate(22deg);
  opacity: 0.7;
}

.comingSoonLabel h3 {
  background: transparent;
  color: var(--primary);
  font-size: 3.3rem;
}

